--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 *{
  margin: 0;
  padding: 0 ;
- font-family: Arial, Helvetica, sans-serif sans-serif;
+ font-family: sans-serif;
 }
 
-button{
-    margin: auto;
-     width: 160px;
-     padding: 0.7em 1em;
-     background: lightblue;
-}
 
+/* header {
+    width: 100%;
+    height: 95vh;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0.3) 30%, rgba(255,255,255,0.2) 50%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0.5) 100%), 
+                url('./assets/header-image.jpg') center/cover no-repeat;
+} */
+header {
+    width: 100%;
+    height: 95vh;
+    background:url('./assets/header-image.jpg') center/cover no-repeat;
+}
