--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
  margin: 0;
  padding: 0 ;
- font-family: sans-serif;
+ font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
@@ -14,7 +14,109 @@
 header {
     width: 100%;
     height: 95vh;
-    background:url('./assets/header-image.jpg') center/cover no-repeat;
+    background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://images.unsplash.com/photo-1509826069158-41fafc8a4a42?q=80&w=1534&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D') center/cover no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.navbar-brand{  
+    font-size: 1.9em;
+}
+
+.collapse{
+    font-size: 1.2em;
+}
+
+.heading-container{
+display:  flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+}
+.heading > h1 {
+    font-size: 5em;
+    text-transform: uppercase;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 400;
+    color: rgb(223, 223, 223);  
+    /* border:  2px solid  red; */
+}
+
+
+.heading > h2 {
+     display:  flex;
+     justify-content: center ;
+     align-items: center;
+     font-size: 3.5em;
+    font-style: italic;
+    color:  white;
+}
+
+@media (max-width:750px) {
+    .heading > h1{
+         font-size: 3rem;
+ }
+
+ .heading h2{
+      font-size: 1.6rem;
+ }
+}
+
+
+.category-container{
+    padding: 3rem;
+    display:  flex ;
+    flex-direction: column;
+     
+}
+.category{
+     display:  flex;
+     /* border:  2px solid black; */
+     height: 300px;
+     padding:  1rem;
+     gap: 1em;
+}
+
+.category-container button{
+      background: rgb(100, 219, 76);
+      color: #000000;
+      padding: 0.6em 1em;
+      border-radius: 6px;
+}
+
+.left{
+     width: 30em;
+     height: 100%;
+     /* border:  2px solid black; */
+}
+
+.left img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 2em;
+}
+
+.right{
+     width: 50%;
+}
+
+.right p{
+     width: 100%;
+}
+
+
+@media (max-width:760px) {
+     /* .category{
+       flex-direction: column;
+     } */
+}
+
+
+
 
 
