--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@
  font-family:  'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-
+body{
+      overflow-x: hidden;
+}
 /* header {
     width: 100%;
     height: 95vh;
@@ -67,26 +69,7 @@ align-items: center;
 }
 
 
-.category-container{
-    padding: 3rem;
-    display:  flex ;
-    flex-direction: column;
-     
-}
-.category{
-     display:  flex;
-     /* border:  2px solid black; */
-     height: 300px;
-     padding:  1rem;
-     gap: 1em;
-}
 
-.category-container button{
-      background: rgb(100, 219, 76);
-      color: #000000;
-      padding: 0.6em 1em;
-      border-radius: 6px;
-}
 
 .left{
      width: 30em;
@@ -116,6 +99,136 @@ align-items: center;
      } */
 }
 
+/* About us */
+.About__us{
+     padding: 3rem;
+     display:  flex ;
+     flex-direction: column;
+     align-items: center;
+     justify-content: center;
+ }
+.About__us--section{
+     display:  flex;
+     margin-top: 3em;
+     justify-content: space-around;
+     font-size: 1.3rem;
+}
+
+.About__us--section >img , ._info {
+     /* border: 3px solid blue; */
+     width: 40%;
+     border-radius: 30px;
+}
+
+
+/*  posts  */
+
+main{
+     display:  flex;
+     flex-direction: column;
+     gap: 3em;
+     align-items: center;
+}
+
+.cardsrow{
+     display:  flex;
+     /* border: 2px solid red; */
+      width: 1100px;
+      justify-content: space-around;
+     /* padding: 1em; */
+}
+
+.post{
+     /* background-color: beige; */
+     width: 500px;
+     padding: 2ems;
+}
+
+.post > button{
+     background: rgb(0, 255, 0);
+     padding: 0.4em 1em;
+   
+}
+
+.post > button > a{
+    text-decoration: none;
+    color: black;
+}
+.post > img{
+    width:  500px;
+    height: 100px;
+ border-radius: 10px;
+}
+
+@media (max-width:480px) {
+    .cardsrow{
+         display:  flex;
+         flex-direction: column;
+    }
+}
+
+/* post section style */
+ .posts{
+     display:  flex;
+     flex-direction: column;
+     align-items: center;
+     justify-items: center;
+      /* border: 2px solid black; */
+      width: 90vw;
+ }
+
+ .post_container{
+     display:flex;
+      /* border: 2px solid red; */
+      width: 100%;
+ }
+
+
+
+ .post_card{
+      /* border:  2px solid blue; */
+      display: flex;
+      width: 33%;
+      flex-direction: column;
+      justify-content: space-between;  
+      padding: 2em;  
+ }
+
+ .post_container  img{
+    border-radius: 20px;
+ }
+ 
+ .post_card button{
+     width: 120px;
+     background-color: rgb(0, 252, 0);
+     padding: 0.3em 0;
+     border-radius: 10px;
+ }
+ .post_card p{
+      
+ }
+ @media (max-width:760px) {
+     .post_container{ 
+      flex-direction: column;
+     }
+
+     .post_card{
+           width: 100%;
+     }
+     
+}
+/* post section style end */
+
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    /* position: sticky; */
+    bottom: 0;
+    width: 100%;
+  }
 
 
 
